fixed desktop image alignment with object-position

--- a/article-preview-component-master/style.css
+++ b/article-preview-component-master/style.css
@@ -27,11 +27,15 @@ body {
     0 41.8px 33.4px rgba(0, 0, 0, 0.05),
     0 100px 80px rgba(0, 0, 0, 0.07);
 }
-.article-preview__image {
-  display: block;
-  object-fit: cover;
-  width: 100%;
+.article-preview__image-wrapper {
   height: 250px;
+  width: 100%;
+  overflow: hidden;
+}
+.article-preview__image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 .article-preview__content {
   padding: 26px;
@@ -109,17 +113,24 @@ body {
   }
   .article-preview__image-wrapper {
     width: 350px;
-  }
-  .article-preview__image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: auto;
     overflow: hidden;
   }
+  .article-preview__image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: top left;
+  }
   .article-preview__content {
-    max-width: 500px;
+    padding: 40px 50px;
+    max-width: 550px;
   }
   .content__title {
+    margin: 0;
     font-size: 1.5rem;
+  }
+  .content__description {
+    margin-bottom: 5px;
   }
 }
